--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nail-methods",
     "description": "Adds methods to a nail classes",
-    "version": "0.1.0alpha",
+    "version": "0.1.0alpha1",
     "homepage": "https://github.com/noptic/nail-methods",
     "author": {
         "name": "Oliver Anan",
